Fixing install scripts, env, alias and functions