@@ -1,13 +1,11 @@
 #!/usr/bin/env bash
 
-function install_conscript() {
-  if command_exists cs
-  then
-    echo 'Conscript already installed. Skipping!'
-    exit 0
-  fi
+save-env "$CONSCRIPT_HOME" "$HOME/.conscript"
+save-env "$CONSCRIPT_OPTS" "-XX:MaxPermSize=512M -Dfile.encoding=UTF-8"
+save-env "$PATH" "$CONSCRIPT_HOME/bin:$PATH"
 
-  conscript_version=${1:-'v0.5.0'}
-  echo 'Installing conscript...'
-  wget "https://raw.githubusercontent.com/foundweekends/conscript/${conscript_version}/setup.sh" -O - | sh
-}
+skip-if-installed 'cs'
+conscript_version=${1:-'v0.5.0'}
+echo 'Installing conscript...'
+wget "https://raw.githubusercontent.com/foundweekends/conscript/${conscript_version}/setup.sh" -O - | sh 
+echo 'Conscript installed. Try "cs --help"'
